--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -7,6 +7,7 @@ ja:
         name: 名前
         email: メールアドレス
         password: パスワード
+        password_confirmation: パスワード(確認)
         first_kana: お名前カナ(全角) 
         last_kana: お名前カナ(全角)
         nickname: ニックネーム
