--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -14,3 +14,13 @@ ja:
         first_name: お名前(全角)
         last_name: お名前(全角)
         birthday: 誕生日
+      item:
+        price: 価格
+        title: 商品名
+        description: 商品の説明
+        category_id: カテゴリー
+        state_id: 商品の状態
+        shipping_id: 配送料の負担
+        consignor_area_id: 発送元の地域
+        days_id: 発送までの日数
+        image: 出品画像
