--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -24,3 +24,8 @@ ja:
         consignor_area_id: 発送元の地域
         days_id: 発送までの日数
         image: 出品画像
+    errors:
+      messages:
+        greater_than: は%{count}円より大きい値にしてください
+        less_than: は%{count}円より小さい値にしてください
+        other_than: を選択してください
