--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -26,6 +26,7 @@ ja:
         image: 出品画像
     errors:
       messages:
-        greater_than: は%{count}円より大きい値にしてください
-        less_than: は%{count}円より小さい値にしてください
+        greater_than_or_equal_to: は%{count}円以上にしてください
+        less_than_or_equal_to: は%{count}円以下にしてください
         other_than: を選択してください
+        not_a_number: は半角数字のみ入力できます
